--- a/views/sheq_approved_document_views.xml
+++ b/views/sheq_approved_document_views.xml
@@ -43,9 +43,14 @@
                     <separator/>
 
                     <group string="For SHEQ Use">
-                        <group>
+                        <group colspan="4">
+                            <group col="2">
                             <field name="is_physical_form"/>
-                            <field name="reason_number" placeholder="REASON NUMBER"/>
+                            <field name="expected_completion_date"/>
+                            </group>
+                            <group col="2">
+                            <field name="rejection_reason"/>
+                            </group>
                         </group>
                         <separator/>
 
